--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
   height: 100%;
 }  
     </style>
+    <script>
+ new PhotoSphereViewer.Viewer({
+  panorama: 'https://photo-sphere-viewer-data.netlify.app/assets/sphere.jpg',
+  container: 'photosphere',
+  caption: 'Parc national du Mercantour <b>&copy; Damien Sorel</b>',
+  loadingImg: 'https://photo-sphere-viewer.js.org/assets/photosphere-logo.gif',
+  defaultLat: 0.3,
+  touchmoveTwoFingers: true,
+  mousewheelCtrlKey: true,
+});
+</script>
   </head>
   <body>
     
