--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 }  
     </style>
     <script>
- var photosphere=new PhotoSphereViewer.Viewer({
+ new PhotoSphereViewer.Viewer({
   panorama: 'https://photo-sphere-viewer-data.netlify.app/assets/sphere.jpg',
   container: 'photosphere',
   caption: 'Parc national du Mercantour <b>&copy; Damien Sorel</b>',
