--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script>
   var viewer = new PhotoSphereViewer.Viewer({
     container: document.querySelector('#viewer'),
-    panorama: 'https://photo-sphere-viewer-data.netlify.app/assets/sphere.jpg'
+    panorama: 'PANO_20210702_104331.jpg'
   });
 </script>
     
